package com.sensei.search.req.protobuf;

option java_package = "com.sensei.search.req.protobuf";
option java_outer_classname = "SenseiRequestBPO";

option optimize_for = SPEED;

message StringParam{
  required string name = 1;
  repeated string vals = 2;
}

message ByteArrayParam{
  required string name = 1;
  optional bytes val = 2; 
}

message FacetHandlerInitializerParam{
  required string name = 1;
  repeated ByteArrayParam intParams = 2;
  repeated ByteArrayParam longParams = 3;
  repeated StringParam stringParams = 4;
  repeated ByteArrayParam bytesParmas = 5;
  repeated ByteArrayParam boolParams = 6;
  repeated ByteArrayParam doubleParams = 7;
}

message Property{
  required string key = 1;
  optional string val = 2;
}

message Selection {
  required string name = 1;
  repeated string values = 2;
  repeated string notValues = 3;
  enum Operation {
    OR = 0;
    AND = 1;
  }
  optional Operation op = 4 [default = OR];
  repeated Property props = 5; 
}

message Sort
{
  optional string field = 1;
  optional bool reverse = 2;
  optional uint32 type = 3;
}

message FacetSpec
{
  required string name = 1;
  optional uint32 max = 2;
  optional bool expand = 3;
  optional uint32 minCount = 4;
  enum SortSpec
  {
    ValueAsc = 0;
    HitsDesc = 1;
  }
  optional SortSpec orderBy = 5 [default = HitsDesc];
}
	
message Request{
  repeated Selection selections = 1;
  optional uint32 offset = 2;
  optional uint32 count = 3;
  repeated Sort sort = 4;
  repeated FacetSpec facetSpecs = 5;
  optional bytes query = 6;
  optional bool fetchStoredFields = 7;
  repeated FacetHandlerInitializerParam facetInitParams = 8;
  optional bytes partitions = 9;
  required int64 tid = 10 [default = -1];
  optional bool showExplanation = 11;
}
